# Snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  RaylibPainter.cpp  RaylibPainter.hpp  Renderable.hpp  abstract_painter.hpp  apple.cpp  apple.hpp  board.cpp  board.hpp  build.cmd  direction.cpp  direction.hpp  engine.cpp  engine.hpp  main.cpp  painter.cpp  painter.hpp  point.cpp  point.hpp  snake.cpp  snake.hpp  tructori și Operatori
tests/: test_apple.cpp  test_board.cpp  test_point.cpp  test_snake.cpp
